Bizfi Production/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>McaApp__Anticipated_Balance__c</fullName>
        <formula>IF(AND(McaApp__Opportunity__r.McaApp__Term_Months__c  &lt;&gt; 0, McaApp__Current_Balance_Amt__c &lt;&gt; 0),
   ((McaApp__Opportunity__r.McaApp__Payback_Amount__c - ((McaApp__Opportunity__r.McaApp__Payback_Amount__c  /  McaApp__Opportunity__r.McaApp__Term_Months__c ) * 
   (  MONTH(TODAY())   -   MONTH(McaApp__Opportunity__r.McaApp__Date_Funded__c)  )) ) /   McaApp__Current_Balance_Amt__c ),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Anticipated_Renewal_Date__c</fullName>
        <label>Anticipated Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Current_Balance_Amt__c</fullName>
        <inlineHelpText>Current Balance Amount that the merchant ows</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Current_Balance_Date__c</fullName>
        <label>Current Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>McaApp__Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microloan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receivable Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Display_on_Manage_Renewal__c</fullName>
        <formula>IF( AND(!ISBLANK(McaApp__Opportunity__c), !ISPICKVAL(McaApp__Stage__c,&quot;Closed/Renewed&quot;), OR(ISBLANK( McaApp__Opportunity_Renewal__c ),ISPICKVAL(McaApp__Opportunity_Renewal__r.StageName,&quot;Closed Lost&quot;), ISPICKVAL(McaApp__Opportunity_Renewal__r.StageName,&quot;Declined&quot;))) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display on Renewal Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McaApp__Funded_Date__c</fullName>
        <label>Funded Date</label>
        <picklist>
            <picklistValues>
                <fullName>1-3 Months Ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 Months Ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-9 Months Ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-12 Months ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12+ Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Months_Since_Funding__c</fullName>
        <formula>(today() - McaApp__Opportunity__r.McaApp__Date_Funded__c) / 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Since Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>McaApp__Opportunity_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity(Renewal)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Opportunity(Renewal))</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>McaApp__PaidImage__c</fullName>
        <formula>IMAGE(&quot;/resource/McaApp__ColorImages/Images/green.png&quot;, &quot;green&quot;, 12, (100 * McaApp__Paid__c)) + IMAGE(&quot;/resource/McaApp__ColorImages/Images/yellow.jpg&quot;, &quot;yellow&quot;, 12, 100 - (100 *McaApp__Paid__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Paid_Amt__c</fullName>
        <formula>McaApp__Opportunity__r.McaApp__Payback_Amount__c - McaApp__Current_Balance_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount the merchant paid back</inlineHelpText>
        <label>Paid Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Paid__c</fullName>
        <description>The field calculates &quot;Paid %&quot; using &quot;Payback Amount&quot; field of Opportunity and &quot;Current Balance Amt.&quot; field of Contract.</description>
        <formula>IF(McaApp__Opportunity__r.McaApp__Payback_Amount__c  &lt;&gt; 0, 
  IF(AND(McaApp__Current_Balance_Amt__c &gt;0,McaApp__Current_Balance_Amt__c &lt; McaApp__Opportunity__r.McaApp__Payback_Amount__c), 
   (McaApp__Opportunity__r.McaApp__Payback_Amount__c - McaApp__Current_Balance_Amt__c)/McaApp__Opportunity__r.McaApp__Payback_Amount__c, 
   0), 
  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Perf_Flag__c</fullName>
        <formula>IF( McaApp__Performance__c &lt;1,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perf Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>McaApp__Performance__c</fullName>
        <formula>if (McaApp__Current_Balance_Amt__c  &gt; 0,  McaApp__Anticipated_Balance__c /  McaApp__Current_Balance_Amt__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anticipated Balance divided by actual Balance</inlineHelpText>
        <label>Performance %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Potential_Renewal_Amt__c</fullName>
        <formula>IF( AND( McaApp__Opportunity__r.McaApp__Payback_Amount__c &lt;&gt; 0, McaApp__Opportunity__r.McaApp__Funding_Amount__c &lt;&gt; 0),  
(McaApp__Opportunity__r.McaApp__Payback_Amount__c -  McaApp__Current_Balance_Amt__c )/
(McaApp__Opportunity__r.McaApp__Payback_Amount__c / McaApp__Opportunity__r.McaApp__Funding_Amount__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will show the amount that would be eligible for renewal</inlineHelpText>
        <label>Potential Renewal Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Eligibility_Days_from_funding__c</fullName>
        <label>Renewal Eligibility (# of months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>McaApp__Renewal_Eligibility_Percent__c</fullName>
        <label>Renewal Eligibility (% of Balance Paid)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Signed/Pending Funding</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible for Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/No renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>McaApp__Term_Completed__c</fullName>
        <formula>IF( McaApp__Months_Since_Funding__c &gt; McaApp__Opportunity__r.McaApp__Term_Months__c,1,

McaApp__Months_Since_Funding__c / McaApp__Opportunity__r.McaApp__Term_Months__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term % Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>McaApp__Total_Merchant_Payments__c</fullName>
        <formula>McaApp__Opportunity__r.McaApp__Total_Merchant_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Merchant Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>McaApp__Unique_Flag__c</fullName>
        <label>Unique Flag</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_ID__c</fullName>
        <externalId>true</externalId>
        <label>OLD ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>McaApp__AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>McaApp__MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Potential_Renewals</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>McaApp__Term_Completed__c</field>
            <operation>greaterThan</operation>
            <value>45</value>
        </filters>
        <label># Potential Renewals</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>